ControlPanelView separated